QA: Sidebar - fix broken layout on smaller desktop displays

--- a/scss/regions/page.scss
+++ b/scss/regions/page.scss
@@ -29,7 +29,6 @@
 .page-sidebar {
   @include media-breakpoint-up(lg) {
     width: 25%;
-    min-width: 300px;
   }
 }
 
